Closed
Bug 1795779
Opened 3 years ago
Closed 3 years ago
AutoProfilerImagePaintMarker ctor always calls TimeStamp::Now()
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
108 Branch
People
(Reporter: smaug, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
TimeStamp::Now() is rather slow and the call shows up in the performance profiles for example when running 'leaves' part of MotionMark
| Assignee | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Updated•3 years ago
|
Keywords: regression
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c6f757b147b5
Don't call TimeStamp::Now for the profiler every time an image is drawn if the profiler isn't active. r=smaug
Comment 3•3 years ago
|
||
Set release status flags based on info from the regressing bug 1704103
status-firefox106:
--- → affected
status-firefox107:
--- → affected
status-firefox108:
--- → affected
status-firefox-esr102:
--- → affected
Comment 4•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Comment 5•3 years ago
|
||
The patch landed in nightly and beta is affected.
:tnikkel, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox107towontfix.
For more information, please visit auto_nag documentation.
Flags: needinfo?(tnikkel)
| Assignee | ||
Comment 6•3 years ago
|
||
Comment on attachment 9298932 [details]
Bug 1795779. Don't call TimeStamp::Now for the profiler every time an image is drawn if the profiler isn't active. r?smaug
Beta/Release Uplift Approval Request
- User impact if declined: small perf fix
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): small change to only make calls needed by the profiler when it is active
- String changes made/needed:
- Is Android affected?: Yes
Flags: needinfo?(tnikkel)
Attachment #9298932 -
Flags: approval-mozilla-beta?
Comment 7•3 years ago
|
||
Comment on attachment 9298932 [details]
Bug 1795779. Don't call TimeStamp::Now for the profiler every time an image is drawn if the profiler isn't active. r?smaug
Approved for 107.0b3.
Attachment #9298932 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•3 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Updated•3 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•