Bug 1795779. Don't call TimeStamp::Now for the profiler every time an image is drawn if the profiler isn't active. r=smaug, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D159554